
## 0.04-2 (2011-10-21)
  - removed the superfluous "name" option from rk.plugin.skeleton() and rk.plugin.component(); names are now
    always provided by "about", either as an <about> node or just the name.
  - result headers now start at level 1 by default in rk.JS.doc()
  - added option "suggest.required" to rk.plugin.skeleton() to add package requirements as suggestions,
    not dependencies

## 0.04-1 (2011-10-20)
  - added "about" option to rk.XML.plugin() to overrule pluginmap defaults
  - added rk.plugin.component(), i.e. modularized the component generation, to allow for more than one
    component in rk.plugin.skeleton(), which subsequently gained the new option "components"
  - improved dependency support, rk.plugin.skeleton() writes dependencies from <about> to DESCRIPTION now
  - fixed dependency definition in rk.XML.about()
  - fixed "verion" typo in rk.XML.about()
  - the dot "." is now also allowed in file names

## 0.04-0 (2011-10-19)
  - for accurcy and consistency with the docs, the "properties" option changed to "modifiers" in rk.JS.vars()
  - added further property modifiers to the internal validation
  - added class rk.JS.var, including show method
  - added support for class rk.JS.var in rk.paste.JS() an id()
  - rk.JS.vars() now returns a list of class rk.JS.var
  - added support for all valid modifiers to rk.XML.convert() and rk.XML.connect()

## 0.03-7 (2011-10-18)
  - added "checkable" and "checked" options to rk.XML.frame()
  - set rk.paste.JS() default level to 2
  - fixed bug in rk.JS.array() (superfluous "=" in generated code)

## 0.03-6 (2011-10-13)
  - lifted rkward package dependecies to 0.5.7 (needed for rk.load.pluginmaps())
  - rk.XML.menu() and rk.plugin.skeleton() can now recursively generate deeper menu structures if you provide it with a list
  - fixed bug in autogeneration of IDs in rk.XML.input() and rk.XML.saveobj()

## 0.03-5 (2011-10-11)
  - rk.XML.tabbook() can now autogenerate IDs without a label